--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,19 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>CDV</title>
+    <title>My blog</title>
   </head>
   <body>
-    <h1>CDV</h1>
+   <div id="header">
+     <h1>Mój blog</h1>
+   </div>
+    <div id="blog">
+      <ul id="list"></ul>
+      <div id="container">
+        <div id="author"></div>
+        <div id="content">Wybierz post&hellip;</div>
+        <div id="comments"></div>
+      </div>
+    </div>
   </body>
 </html>
